# dissertation-poc

./: .gitignore  Dockerfile  Dockerfile.no_cuda  README.md  bs_plots.ipynb  bs_test.ipynb  hello.py  hmc_test.ipynb  pendulum_posterior_plots.ipynb  plots.ipynb  pyproject.toml  test.ipynb
src/: bench_bac_hopper.py  bench_hmc.py  bench_hopper.py  bench_inverted_double_pendulum.py  bench_inverted_pendulum.py  bench_inverted_pendulum_td3.py  bench_pendulum.py  bench_pendulum_td3.py  ddpg_inverted_double_pendulum.py  ddpg_inverted_pendulum.py  ddpg_pendulum.py  demo.ipynb  environment.py  experiments.py  hex.py  plots.ipynb  policy.py  td3_inverted_double_pendulum.py  td3_inverted_pendulum.py  td3_pendulum.py  test.py  test_bac_hopper.py  test_bac_pendulum.py  test_hopper.py  test_inverted_double_pendulum.py  test_inverted_pendulum.py  test_mountain_car.py  test_pendulum.py  test_td3_inverted_double_pendulum.py  test_td3_inverted_pendulum.py  test_td3_pendulum.py  util.py
src/algorithms/: actor_critic.py  bootstrapped_actor_critic.py  common.py  ddpg.py  hybrid_hmc.py  networks.py  policy.py  q_model.py  random_policy.py  td3.py  vanilla_actor_critic.py
src/bac/: manifest.py  util.py
src/bac/algorithms/: __init__.py  bootstrapped_actor_critic.py  common.py  hmc_actor_critic.py  hybrid_hmc.py  networks.py  policy.py  random_policy.py  (+2 more)
src/environments/: environment.py  hopper.py  inverted_double_pendulum.py  inverted_pendulum.py  mountain_car.py  pendulum.py
src/tests/: test_mountain_car.py
src/util/: episodic_replay_buffer.py  replay_buffer.py
(+45 files in other folders)
