[project]
name = "poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arviz>=0.21.0",
    "graphviz>=0.20.3",
    "gymnasium[classic-control,mujoco]>=1.2.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jax>=0.6.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "numpyro[cpu]>=0.18.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
gpu = ["jax[cuda12]", "numpyro[cuda]"]
